@@ -1,3 +1,11 @@
+2019-03-06 Philipp Klaus Krause <pkk AT spth.de>
+
+	* sdas/asxxsrc/asout.c:
+	  Addrss handling fix, patch by Nicolas Lesser.
+	* sim/ucsim/pdk.src/glob.cc,
+	  sim/ucsim/pdk.src/pdk.cc:
+	  state output fix, patch by Nicolas Lesser.
+
 2019-03-05 Philipp Klaus Krause <pkk AT spth.de>
 
 	* device/lib/pdk14/__gptrget.s,
